// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddonConfigurationBadge Renders in error state for status "failed" 1`] = `
<AddonConfigurationBadge
  status="failed"
>
  <Badge
    type="error"
  >
    <Badge
      forwardedRef={null}
      type="error"
    >
      <Badge
        disableStyles={false}
        type="error"
      >
        <span
          className="fd-badge fd-badge--error"
        >
          failed
        </span>
      </Badge>
    </Badge>
  </Badge>
</AddonConfigurationBadge>
`;

exports[`AddonConfigurationBadge Renders in success state for "ready" status 1`] = `
<AddonConfigurationBadge
  status="ready"
>
  <Badge
    type="success"
  >
    <Badge
      forwardedRef={null}
      type="success"
    >
      <Badge
        disableStyles={false}
        type="success"
      >
        <span
          className="fd-badge fd-badge--success"
        >
          ready
        </span>
      </Badge>
    </Badge>
  </Badge>
</AddonConfigurationBadge>
`;

exports[`AddonConfigurationBadge Renders in warning state for custom status 1`] = `
<AddonConfigurationBadge
  status="other"
>
  <Badge
    type="warning"
  >
    <Badge
      forwardedRef={null}
      type="warning"
    >
      <Badge
        disableStyles={false}
        type="warning"
      >
        <span
          className="fd-badge fd-badge--warning"
        >
          other
        </span>
      </Badge>
    </Badge>
  </Badge>
</AddonConfigurationBadge>
`;
